--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,12 @@ cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+flatbuffers==1.12
 gast==0.3.3
 google-auth==1.24.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.34.0
+grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==3.3.0
@@ -52,7 +53,7 @@ nbconvert==6.0.7
 nbformat==5.0.8
 nest-asyncio==1.4.3
 notebook==6.1.6
-numpy==1.16.4
+numpy==1.19.3
 oauthlib==3.1.0
 opencv-python==4.4.0.46
 opt-einsum==3.3.0
@@ -84,11 +85,10 @@ scikit-learn==0.22.2
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.15.0
-tensorboard==2.2.2
+tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-tensorflow-gpu==2.2.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
 tensorflow-gpu-estimator==2.2.0
 termcolor==1.1.0
 terminado==0.9.1
